hphp/hack/test/typecheck/global_const13.php.exp
File "global_const13.php", line 3, characters 11-24:
Invalid expression in constant initializer (Parsing[1002])
